--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,31 @@
-.App {
-  text-align: center;
+html, body, #root {
+  height: 100%;
+  margin: 0;
+  font-family: 'Open Sans', sans-serif;
+  background-color: rgba(245, 245, 245, 1);
+  color: rgba(30, 30, 30, 1)
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.fullscreen-app {
+  height: 100%;
+  padding: 0px 16px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+h1 {
+  margin: 12px 0px 6px;
+  font-family: 'Bree Serif', serif;
+  font-size: 32px;
+  color: rgba(60, 60, 60, 1);
+  line-height: 44px;
 }
 
-.App-link {
-  color: #61dafb;
+h3 {
+  margin: 4px 0px;
+  font-size: 15px;
+  font-weight: 300;
+  color: rgba(120, 120, 120, 1)
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.heading {
+  margin-bottom: 40px;
 }
