--- a/src/App.css
+++ b/src/App.css
@@ -3,19 +3,111 @@ html, body, #root {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
     background-color: rgba(245, 245, 245, 1);
-    color: rgba(30, 30, 30, 1)
+    color:#1E1E1E
 }
 
 body {
     min-width: 320px;
 }
 
+#root {
+
+}
+
+/* SPINNER */
+.lds-spinner {
+    color: official;
+    display: inline-block;
+    position: relative;
+    width: 64px;
+    height: 64px;
+  }
+  .lds-spinner div {
+    transform-origin: 32px 32px;
+    animation: lds-spinner 1.2s linear infinite;
+  }
+  .lds-spinner div:after {
+    content: " ";
+    display: block;
+    position: absolute;
+    top: 3px;
+    left: 29px;
+    width: 5px;
+    height: 14px;
+    border-radius: 20%;
+    background: #878787;
+  }
+  .lds-spinner div:nth-child(1) {
+    transform: rotate(0deg);
+    animation-delay: -1.1s;
+  }
+  .lds-spinner div:nth-child(2) {
+    transform: rotate(30deg);
+    animation-delay: -1s;
+  }
+  .lds-spinner div:nth-child(3) {
+    transform: rotate(60deg);
+    animation-delay: -0.9s;
+  }
+  .lds-spinner div:nth-child(4) {
+    transform: rotate(90deg);
+    animation-delay: -0.8s;
+  }
+  .lds-spinner div:nth-child(5) {
+    transform: rotate(120deg);
+    animation-delay: -0.7s;
+  }
+  .lds-spinner div:nth-child(6) {
+    transform: rotate(150deg);
+    animation-delay: -0.6s;
+  }
+  .lds-spinner div:nth-child(7) {
+    transform: rotate(180deg);
+    animation-delay: -0.5s;
+  }
+  .lds-spinner div:nth-child(8) {
+    transform: rotate(210deg);
+    animation-delay: -0.4s;
+  }
+  .lds-spinner div:nth-child(9) {
+    transform: rotate(240deg);
+    animation-delay: -0.3s;
+  }
+  .lds-spinner div:nth-child(10) {
+    transform: rotate(270deg);
+    animation-delay: -0.2s;
+  }
+  .lds-spinner div:nth-child(11) {
+    transform: rotate(300deg);
+    animation-delay: -0.1s;
+  }
+  .lds-spinner div:nth-child(12) {
+    transform: rotate(330deg);
+    animation-delay: 0s;
+  }
+  @keyframes lds-spinner {
+    0% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+  
+/* END SPINNER */
+
 .fullscreen-app {
     height: 100%;
     padding: 0px 16px;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 834px;
+}
+
+.parent-width {
+    width: 100%;
 }
 
 h1 {
@@ -30,7 +122,14 @@ h3 {
     margin: 4px 0px;
     font-size: 15px;
     font-weight: 300;
-    color: rgba(120, 120, 120, 1)
+    color: #878787
+}
+
+h5 {
+    font-size: 12px;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: #878787;
 }
 
 .heading {
@@ -85,4 +184,61 @@ padding: 0px 8px;
     font-weight: 600;
     font-size: 14px;
     letter-spacing: 0.15px
+}
+
+.search-bar-wrapper > .search-btn:disabled {
+   
+    background-color: rgba(152, 182, 83, 0.4);
+    color: white;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.25);
+
+}
+
+.loader {
+    height: calc(100% - 170px);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.books-wrapper {
+    width: 100%;
+    margin: 24px 0px 0px 0px;
+}
+
+.book {
+    display: flex;
+}
+
+.book > img {
+    width: 68px;
+}
+
+.book-info {
+    height: 100%;
+    width: calc(100%-68px);
+    padding: 0px 0px 0px 12px;
+    max-width: calc(100%-68px);
+    min-width: 0;
+}
+
+.book-genre {
+    margin: 0px;
+    font-size: 10px;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: #878787;
+}
+
+.book-title {
+    font-family: 'Bree Serif', serif;
+    color: #1E1E1E;
+    font-size: 18px;
+    height: 21px;
+    margin: 2px 0px 0px 0px;
+
+    white-space: nowrap; 
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
