--- a/src/App.css
+++ b/src/App.css
@@ -209,10 +209,13 @@ padding: 0px 8px;
 
 .book {
     display: flex;
+    margin-bottom: 24px;
 }
 
 .book > img {
     width: 68px;
+    flex-shrink: 0;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.25);
 }
 
 .book-info {
@@ -225,7 +228,7 @@ padding: 0px 8px;
 
 .book-genre {
     margin: 0px;
-    font-size: 10px;
+    font-size: 11px;
     font-weight: 500;
     text-transform: uppercase;
     color: #878787;
@@ -241,4 +244,19 @@ padding: 0px 8px;
     white-space: nowrap; 
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+.book-intro{
+    margin: 10px 0px 0px 0px;
+    height: 57.5px; 
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+    font-size: 15px;
+    line-height: 19px;
+
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+
 }
